--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.16"
   }
 }
