--- a/package.json
+++ b/package.json
@@ -7,23 +7,30 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/enzyme": "^3.10.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "enzyme": "^3.11.0",
     "graphql": "^15.5.0",
+    "jest-enzyme": "^7.1.2",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "ts-jest": "^26.1.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.1.2",
+    "wait-for-expect": "^3.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,11 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^17.0.11",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.16",
-    "babel-jest": "^27.4.2",
-    "jest": "^27.4.3",
-    "jest-environment-node": "^27.4.2"
+    "jest-environment-jsdom-sixteen": "^2.0.0"
   }
 }
